--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,214 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#2196F3"
+    android:backgroundTint="#885B8F"
+    android:backgroundTintMode="add"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:id="@+id/appName"
+        android:layout_width="414dp"
+        android:layout_height="90dp"
+        android:elegantTextHeight="true"
+        android:ellipsize="middle"
+        android:fontFamily="sans-serif-black"
+        android:freezesText="false"
+        android:includeFontPadding="false"
+        android:text="HeadsUP"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textIsSelectable="false"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/catTxt"
+        android:layout_width="313dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Categories"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:visibility="visible"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appName"
+        tools:visibility="visible" />
+
+    <Button
+        android:id="@+id/startButt"
+        android:layout_width="313dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="240dp"
+        android:text="start"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textIsSelectable="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/appName"
+        app:layout_constraintVertical_bias="0.927" />
+
+    <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/catGrid"
+        android:layout_width="413dp"
+        android:layout_height="213dp"
+        android:clipToPadding="false"
+        android:padding="0pt"
+        android:paddingStart="0pt"
+        android:paddingLeft="0pt"
+        android:paddingTop="5pt"
+        android:paddingEnd="5pt"
+        android:paddingRight="0pt"
+        android:paddingBottom="5pt"
+        app:columnCount="3"
+        app:columnOrderPreserved="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/appName"
+        app:rowCount="3">
+
+        <Button
+            android:id="@+id/cat7"
+            android:layout_width="127dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="5pt"
+            android:clickable="false"
+            android:insetLeft="5pt"
+            android:insetTop="5pt"
+            android:insetRight="5pt"
+            android:insetBottom="0pt"
+            android:text="Button"
+            app:layout_column="0"
+            app:layout_row="2" />
+
+        <Button
+            android:id="@+id/cat4"
+            android:layout_width="127dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="5pt"
+            android:clickable="false"
+            android:insetLeft="5pt"
+            android:insetTop="5pt"
+            android:insetRight="5pt"
+            android:insetBottom="0pt"
+            android:text="Button"
+            app:layout_column="0"
+            app:layout_row="1" />
+
+        <Button
+            android:id="@+id/cat1"
+            android:layout_width="127dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="5pt"
+            android:clickable="false"
+            android:insetLeft="5pt"
+            android:insetTop="5pt"
+            android:insetRight="5pt"
+            android:insetBottom="0pt"
+            android:text="Button"
+            app:layout_column="0"
+            app:layout_row="0" />
+
+        <Button
+            android:id="@+id/cat2"
+            android:layout_width="127dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="5pt"
+            android:clickable="false"
+            android:insetLeft="5pt"
+            android:insetTop="5pt"
+            android:insetRight="5pt"
+            android:insetBottom="0pt"
+            android:text="Button"
+            app:layout_column="1"
+            app:layout_row="0" />
+
+        <Button
+            android:id="@+id/cat5"
+            android:layout_width="127dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="5pt"
+            android:clickable="false"
+            android:insetLeft="5pt"
+            android:insetTop="5pt"
+            android:insetRight="5pt"
+            android:insetBottom="0pt"
+            android:text="Button"
+            app:layout_column="1"
+            app:layout_row="1" />
+
+        <Button
+            android:id="@+id/cat8"
+            android:layout_width="127dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="5pt"
+            android:clickable="false"
+            android:insetLeft="5pt"
+            android:insetTop="5pt"
+            android:insetRight="5pt"
+            android:insetBottom="0pt"
+            android:text="Button"
+            app:layout_column="1"
+            app:layout_row="2" />
+
+        <Button
+            android:id="@+id/cat3"
+            android:layout_width="127dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="5pt"
+            android:clickable="false"
+            android:insetLeft="5pt"
+            android:insetTop="5pt"
+            android:insetRight="5pt"
+            android:insetBottom="0pt"
+            android:text="Button"
+            app:layout_column="2"
+            app:layout_row="0" />
+
+        <Button
+            android:id="@+id/cat6"
+            android:layout_width="127dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="5pt"
+            android:clickable="false"
+            android:insetLeft="5pt"
+            android:insetTop="5pt"
+            android:insetRight="5pt"
+            android:insetBottom="0pt"
+            android:text="Button"
+            app:layout_column="2"
+            app:layout_row="1" />
+
+        <Button
+            android:id="@+id/cat9"
+            android:layout_width="127dp"
+            android:layout_height="68dp"
+            android:layout_marginStart="5pt"
+            android:clickable="false"
+            android:insetLeft="5pt"
+            android:insetTop="5pt"
+            android:insetRight="5pt"
+            android:insetBottom="0pt"
+            android:text="Button"
+            app:layout_column="2"
+            app:layout_row="2" />
+
+    </androidx.gridlayout.widget.GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
