--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,7 +96,7 @@
             android:insetTop="5pt"
             android:insetRight="5pt"
             android:insetBottom="0pt"
-            android:text="Button"
+            android:text="7"
             app:layout_column="0"
             app:layout_row="2" />
 
@@ -110,7 +110,7 @@
             android:insetTop="5pt"
             android:insetRight="5pt"
             android:insetBottom="0pt"
-            android:text="Button"
+            android:text="4"
             app:layout_column="0"
             app:layout_row="1" />
 
@@ -124,7 +124,7 @@
             android:insetTop="5pt"
             android:insetRight="5pt"
             android:insetBottom="0pt"
-            android:text="Button"
+            android:text="1"
             app:layout_column="0"
             app:layout_row="0" />
 
@@ -138,7 +138,7 @@
             android:insetTop="5pt"
             android:insetRight="5pt"
             android:insetBottom="0pt"
-            android:text="Button"
+            android:text="2"
             app:layout_column="1"
             app:layout_row="0" />
 
@@ -152,7 +152,7 @@
             android:insetTop="5pt"
             android:insetRight="5pt"
             android:insetBottom="0pt"
-            android:text="Button"
+            android:text="5"
             app:layout_column="1"
             app:layout_row="1" />
 
@@ -166,7 +166,7 @@
             android:insetTop="5pt"
             android:insetRight="5pt"
             android:insetBottom="0pt"
-            android:text="Button"
+            android:text="8"
             app:layout_column="1"
             app:layout_row="2" />
 
@@ -180,7 +180,7 @@
             android:insetTop="5pt"
             android:insetRight="5pt"
             android:insetBottom="0pt"
-            android:text="Button"
+            android:text="3"
             app:layout_column="2"
             app:layout_row="0" />
 
@@ -194,7 +194,7 @@
             android:insetTop="5pt"
             android:insetRight="5pt"
             android:insetBottom="0pt"
-            android:text="Button"
+            android:text="6"
             app:layout_column="2"
             app:layout_row="1" />
 
@@ -208,7 +208,7 @@
             android:insetTop="5pt"
             android:insetRight="5pt"
             android:insetBottom="0pt"
-            android:text="Button"
+            android:text="9"
             app:layout_column="2"
             app:layout_row="2" />
 
