--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,7 @@
         android:paddingEnd="5pt"
         android:paddingRight="0pt"
         android:paddingBottom="5pt"
+        android:visibility="gone"
         app:columnCount="3"
         app:columnOrderPreserved="false"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -224,5 +225,74 @@
             app:layout_row="2" />
 
     </androidx.gridlayout.widget.GridLayout>
+
+    <ScrollView
+        android:id="@+id/view"
+        android:layout_width="414dp"
+        android:layout_height="462dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/appName"
+        app:layout_constraintVertical_bias="0.575">
+
+        <LinearLayout
+            android:id="@+id/gridL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="visible">
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="50pt"
+                android:includeFontPadding="false"
+                android:text="Button"
+                app:cornerRadius="10pt" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="match_parent"
+                android:layout_height="50pt"
+                android:includeFontPadding="false"
+                android:text="Button"
+                app:cornerRadius="10pt" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="match_parent"
+                android:layout_height="50pt"
+                android:includeFontPadding="false"
+                android:text="Button"
+                app:cornerRadius="10pt" />
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="match_parent"
+                android:layout_height="50pt"
+                android:includeFontPadding="false"
+                android:text="Button"
+                app:cornerRadius="10pt" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="match_parent"
+                android:layout_height="50pt"
+                android:includeFontPadding="false"
+                android:text="Button"
+                app:cornerRadius="10pt" />
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="match_parent"
+                android:layout_height="50pt"
+                android:includeFontPadding="false"
+                android:text="Button"
+                app:cornerRadius="10pt" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
