--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,32 @@
         app:layout_constraintTop_toBottomOf="@+id/appName"
         tools:visibility="visible" />
 
+    <TextView
+        android:id="@+id/scoreTitle"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:text="Score:"
+        android:textSize="42sp"
+        android:textAlignment="center"
+        android:layout_marginTop="180dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <TextView
+        android:id="@+id/score"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        tools:text="0"
+        android:textSize="42sp"
+        android:textAlignment="center"
+        android:layout_marginTop="240dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
     <Button
         android:id="@+id/startButt"
         android:layout_width="313dp"
@@ -67,162 +93,104 @@
         app:layout_constraintTop_toTopOf="@+id/appName"
         app:layout_constraintVertical_bias="0.927" />
 
-    <androidx.gridlayout.widget.GridLayout
-        android:id="@+id/catGrid"
-        android:layout_width="413dp"
-        android:layout_height="213dp"
-        android:clipToPadding="false"
-        android:padding="0pt"
-        android:paddingStart="0pt"
-        android:paddingLeft="0pt"
-        android:paddingTop="5pt"
-        android:paddingEnd="5pt"
-        android:paddingRight="0pt"
-        android:paddingBottom="5pt"
-        app:columnCount="3"
-        app:columnOrderPreserved="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+    <Button
+        android:id="@+id/cat1"
+        android:layout_width="127dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="368dp"
+        android:clickable="false"
+        android:text="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/appName"
-        app:rowCount="3">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/cat7"
-            android:layout_width="127dp"
-            android:layout_height="68dp"
-            android:layout_marginStart="5pt"
-            android:clickable="false"
-            android:insetLeft="5pt"
-            android:insetTop="5pt"
-            android:insetRight="5pt"
-            android:insetBottom="0pt"
-            android:text="7"
-            android:visibility="visible"
-            app:layout_column="0"
-            app:layout_row="2" />
+    <Button
+        android:id="@+id/cat2"
+        android:layout_width="127dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="368dp"
+        android:clickable="false"
+        android:text="2"
+        app:layout_constraintEnd_toStartOf="@id/cat3"
+        app:layout_constraintStart_toEndOf="@+id/cat1"
+        app:layout_constraintTop_toTopOf="@+id/appName" />
 
-        <Button
-            android:id="@+id/cat4"
-            android:layout_width="127dp"
-            android:layout_height="68dp"
-            android:layout_marginStart="5pt"
-            android:clickable="false"
-            android:insetLeft="5pt"
-            android:insetTop="5pt"
-            android:insetRight="5pt"
-            android:insetBottom="0pt"
-            android:text="4"
-            android:visibility="visible"
-            app:layout_column="0"
-            app:layout_row="1" />
+    <Button
+        android:id="@+id/cat3"
+        android:layout_width="127dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="368dp"
+        android:layout_marginEnd="4dp"
+        android:clickable="false"
+        android:text="3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cat2"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/cat1"
-            android:layout_width="127dp"
-            android:layout_height="68dp"
-            android:layout_marginStart="5pt"
-            android:clickable="false"
-            android:insetLeft="5pt"
-            android:insetTop="5pt"
-            android:insetRight="5pt"
-            android:insetBottom="0pt"
-            android:text="1"
-            android:visibility="visible"
-            app:layout_column="0"
-            app:layout_row="0" />
+    <Button
+        android:id="@+id/cat4"
+        android:layout_width="127dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="5dp"
+        android:clickable="false"
+        android:text="4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cat1" />
 
-        <Button
-            android:id="@+id/cat2"
-            android:layout_width="127dp"
-            android:layout_height="68dp"
-            android:layout_marginStart="5pt"
-            android:clickable="false"
-            android:insetLeft="5pt"
-            android:insetTop="5pt"
-            android:insetRight="5pt"
-            android:insetBottom="0pt"
-            android:text="2"
-            android:visibility="visible"
-            app:layout_column="1"
-            app:layout_row="0" />
+    <Button
+        android:id="@+id/cat5"
+        android:layout_width="127dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="5dp"
+        android:clickable="false"
+        android:text="5"
+        app:layout_constraintStart_toEndOf="@+id/cat4"
+        app:layout_constraintTop_toBottomOf="@+id/cat2"
+        app:layout_constraintEnd_toStartOf="@id/cat6"/>
 
-        <Button
-            android:id="@+id/cat5"
-            android:layout_width="127dp"
-            android:layout_height="68dp"
-            android:layout_marginStart="5pt"
-            android:clickable="false"
-            android:insetLeft="5pt"
-            android:insetTop="5pt"
-            android:insetRight="5pt"
-            android:insetBottom="0pt"
-            android:text="5"
-            android:visibility="visible"
-            app:layout_column="1"
-            app:layout_row="1" />
+    <Button
+        android:id="@+id/cat6"
+        android:layout_width="127dp"
+        android:layout_height="68dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginTop="5dp"
+        android:clickable="false"
+        android:text="6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cat5"
+        app:layout_constraintTop_toBottomOf="@+id/cat3" />
+    <Button
+        android:id="@+id/cat7"
+        android:layout_width="127dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="5dp"
+        android:clickable="false"
+        android:text="7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cat4" />
+    <Button
+        android:id="@+id/cat8"
+        android:layout_width="127dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="5dp"
+        android:clickable="false"
+        android:text="8"
+        app:layout_constraintStart_toEndOf="@+id/cat7"
+        app:layout_constraintTop_toBottomOf="@+id/cat5"
+        app:layout_constraintEnd_toStartOf="@id/cat9"/>
+    <Button
+        android:id="@+id/cat9"
+        android:layout_width="127dp"
+        android:layout_height="68dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginTop="5dp"
+        android:clickable="false"
+        android:text="9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cat8"
+        app:layout_constraintTop_toBottomOf="@+id/cat6" />
 
-        <Button
-            android:id="@+id/cat8"
-            android:layout_width="127dp"
-            android:layout_height="68dp"
-            android:layout_marginStart="5pt"
-            android:clickable="false"
-            android:insetLeft="5pt"
-            android:insetTop="5pt"
-            android:insetRight="5pt"
-            android:insetBottom="0pt"
-            android:text="8"
-            android:visibility="visible"
-            app:layout_column="1"
-            app:layout_row="2" />
-
-        <Button
-            android:id="@+id/cat3"
-            android:layout_width="127dp"
-            android:layout_height="68dp"
-            android:layout_marginStart="5pt"
-            android:clickable="false"
-            android:insetLeft="5pt"
-            android:insetTop="5pt"
-            android:insetRight="5pt"
-            android:insetBottom="0pt"
-            android:text="3"
-            android:visibility="visible"
-            app:layout_column="2"
-            app:layout_row="0" />
-
-        <Button
-            android:id="@+id/cat6"
-            android:layout_width="127dp"
-            android:layout_height="68dp"
-            android:layout_marginStart="5pt"
-            android:clickable="false"
-            android:insetLeft="5pt"
-            android:insetTop="5pt"
-            android:insetRight="5pt"
-            android:insetBottom="0pt"
-            android:text="6"
-            android:visibility="visible"
-            app:layout_column="2"
-            app:layout_row="1" />
-
-        <Button
-            android:id="@+id/cat9"
-            android:layout_width="127dp"
-            android:layout_height="68dp"
-            android:layout_marginStart="5pt"
-            android:clickable="false"
-            android:insetLeft="5pt"
-            android:insetTop="5pt"
-            android:insetRight="5pt"
-            android:insetBottom="0pt"
-            android:text="9"
-            android:visibility="visible"
-            app:layout_column="2"
-            app:layout_row="2" />
-
-    </androidx.gridlayout.widget.GridLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
