--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,39 +12,39 @@
 
     <TextView
         android:id="@+id/appName"
-        android:layout_width="414dp"
-        android:layout_height="90dp"
+        android:layout_width="400dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="1dp"
         android:elegantTextHeight="true"
         android:ellipsize="middle"
         android:fontFamily="sans-serif-black"
         android:freezesText="false"
         android:includeFontPadding="false"
-        android:text="HeadsUP"
+        android:text="Heads UP"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textIsSelectable="false"
-        android:textSize="12sp"
+        android:textSize="64sp"
         android:textStyle="bold"
         android:visibility="visible"
-        app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.01" />
 
     <TextView
         android:id="@+id/catTxt"
         android:layout_width="313dp"
-        android:layout_height="39dp"
-        android:layout_marginTop="20dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-medium"
         android:text="Categories"
         android:textAlignment="center"
         android:textAllCaps="false"
+        android:textSize="44sp"
         android:textStyle="bold"
         android:visibility="visible"
-        app:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appName"
@@ -54,27 +54,27 @@
         android:id="@+id/scoreTitle"
         android:layout_width="200dp"
         android:layout_height="50dp"
+        android:layout_marginTop="232dp"
         android:text="Score:"
-        android:textSize="42sp"
         android:textAlignment="center"
-        android:layout_marginTop="180dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="42sp"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/score"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        tools:text="0"
-        android:textSize="42sp"
+        android:layout_marginTop="300dp"
         android:textAlignment="center"
-        android:layout_marginTop="240dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="42sp"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="0" />
 
     <Button
         android:id="@+id/startButt"
@@ -97,7 +97,7 @@
         android:id="@+id/cat1"
         android:layout_width="127dp"
         android:layout_height="68dp"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="368dp"
         android:clickable="false"
         android:text="1"
@@ -113,7 +113,7 @@
         android:text="2"
         app:layout_constraintEnd_toStartOf="@id/cat3"
         app:layout_constraintStart_toEndOf="@+id/cat1"
-        app:layout_constraintTop_toTopOf="@+id/appName" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/cat3"
@@ -131,7 +131,7 @@
         android:id="@+id/cat4"
         android:layout_width="127dp"
         android:layout_height="68dp"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
         android:clickable="false"
         android:text="4"
@@ -164,7 +164,7 @@
         android:id="@+id/cat7"
         android:layout_width="127dp"
         android:layout_height="68dp"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
         android:clickable="false"
         android:text="7"
