--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,14 +52,14 @@
 
     <TextView
         android:id="@+id/scoreTitle"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="232dp"
+        android:layout_width="429dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="656dp"
         android:text="@string/score"
         android:textAlignment="center"
         android:textSize="42sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -70,6 +70,7 @@
         android:layout_marginTop="300dp"
         android:textAlignment="center"
         android:textSize="42sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
