--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:backgroundTint="#885B8F"
     android:backgroundTintMode="add"
     android:visibility="visible"
+    android:id="@+id/layout"
     tools:context=".MainActivity">
 
     <TextView
@@ -58,6 +59,7 @@
         android:text="@string/score"
         android:textAlignment="center"
         android:textSize="42sp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
