Squashed commit of the following:
commit 7053cc0a3dfc00dda5a02f29fe41aa031ab2d9e6
Author: Phamda1340 <58050461+Phamda1340@users.noreply.github.com>
Date:   Fri Oct 20 10:54:40 2023 -0700

    update key

commit e881d8f0925655a674a0d2b1373f76072297d7c6
Author: Phamda1340 <58050461+Phamda1340@users.noreply.github.com>
Date:   Wed Oct 18 14:38:51 2023 -0700

    Ocr using Tesseract

commit 4e6f06964306e14d849ddbd65e930d90e11ae95e
Merge: cd63e51 5446feb
Author: Phamda1340 <58050461+Phamda1340@users.noreply.github.com>
Date:   Thu Oct 5 20:41:10 2023 -0700

    Merge branch 'main' of https://github.com/eyalhaimovich/PhamspectProjects

commit cd63e514324d5ed1c06cd04bf89ae146be7c7679
Author: Phamda1340 <58050461+Phamda1340@users.noreply.github.com>
Date:   Thu Oct 5 20:40:59 2023 -0700

    change vertical bias

commit 5446feb31df838b0f52dbdc8a33e3144935c7603
Author: Phamda1340 <58050461+Phamda1340@users.noreply.github.com>
Date:   Thu Oct 5 12:57:43 2023 -0700

    Update README.md

commit ecaab5ff7afaebcc87664c71579510a7b6cb340a
Author: Phamda1340 <58050461+Phamda1340@users.noreply.github.com>
Date:   Thu Oct 5 12:51:33 2023 -0700

    style changes

commit d433a0379c2aa12a9a33be6e75a482f8d3f45135
Author: Phamda1340 <58050461+Phamda1340@users.noreply.github.com>
Date:   Tue Oct 3 11:24:07 2023 -0700

    # Conflicts:
    #	.idea/misc.xml
    #	app/src/main/java/com/phamspect/headsupgame/MainActivity.kt

commit 40a8d313ec84de687fd67711648827eedb3ee1c5
Author: Phamda1340 <58050461+Phamda1340@users.noreply.github.com>
Date:   Tue Oct 3 10:57:46 2023 -0700

    Update README.md

commit 74f50d0e717b2c7bff620e934bce272801e4061c
Author: eyalhaimovich <eyalh@arizona.edu>
Date:   Thu Sep 21 14:42:50 2023 -0700

    Updated ReadMe

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:backgroundTint="#885B8F"
     android:backgroundTintMode="add"
     android:visibility="visible"
+    android:id="@+id/layout"
     tools:context=".MainActivity">
 
     <TextView
@@ -20,7 +21,7 @@
         android:fontFamily="sans-serif-black"
         android:freezesText="false"
         android:includeFontPadding="false"
-        android:text="Heads UP"
+        android:text="@string/app_name"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textIsSelectable="false"
@@ -39,7 +40,7 @@
         android:layout_height="80dp"
         android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Categories"
+        android:text="@string/categoriesTitle"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="44sp"
@@ -52,14 +53,15 @@
 
     <TextView
         android:id="@+id/scoreTitle"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="232dp"
-        android:text="Score:"
+        android:layout_width="429dp"
+        android:layout_height="58dp"
+        android:layout_marginTop="656dp"
+        android:text="@string/score"
         android:textAlignment="center"
         android:textSize="42sp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -70,6 +72,7 @@
         android:layout_marginTop="300dp"
         android:textAlignment="center"
         android:textSize="42sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +84,7 @@
         android:layout_width="313dp"
         android:layout_height="66dp"
         android:layout_marginTop="240dp"
-        android:text="start"
+        android:text="@string/startButton"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textIsSelectable="false"
@@ -100,7 +103,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="368dp"
         android:clickable="false"
-        android:text="1"
+        android:text="@string/cat1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -110,7 +113,7 @@
         android:layout_height="68dp"
         android:layout_marginTop="368dp"
         android:clickable="false"
-        android:text="2"
+        android:text="@string/cat2"
         app:layout_constraintEnd_toStartOf="@id/cat3"
         app:layout_constraintStart_toEndOf="@+id/cat1"
         app:layout_constraintTop_toTopOf="parent" />
@@ -122,7 +125,7 @@
         android:layout_marginTop="368dp"
         android:layout_marginEnd="4dp"
         android:clickable="false"
-        android:text="3"
+        android:text="@string/cat3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cat2"
         app:layout_constraintTop_toTopOf="parent" />
@@ -134,7 +137,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
         android:clickable="false"
-        android:text="4"
+        android:text="@string/cat4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cat1" />
 
@@ -144,7 +147,7 @@
         android:layout_height="68dp"
         android:layout_marginTop="5dp"
         android:clickable="false"
-        android:text="5"
+        android:text="@string/cat5"
         app:layout_constraintStart_toEndOf="@+id/cat4"
         app:layout_constraintTop_toBottomOf="@+id/cat2"
         app:layout_constraintEnd_toStartOf="@id/cat6"/>
@@ -156,7 +159,7 @@
         android:layout_marginEnd="4dp"
         android:layout_marginTop="5dp"
         android:clickable="false"
-        android:text="6"
+        android:text="@string/cat6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cat5"
         app:layout_constraintTop_toBottomOf="@+id/cat3" />
@@ -167,7 +170,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
         android:clickable="false"
-        android:text="7"
+        android:text="@string/cat7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cat4" />
     <Button
@@ -176,7 +179,7 @@
         android:layout_height="68dp"
         android:layout_marginTop="5dp"
         android:clickable="false"
-        android:text="8"
+        android:text="@string/cat8"
         app:layout_constraintStart_toEndOf="@+id/cat7"
         app:layout_constraintTop_toBottomOf="@+id/cat5"
         app:layout_constraintEnd_toStartOf="@id/cat9"/>
@@ -187,7 +190,7 @@
         android:layout_marginEnd="4dp"
         android:layout_marginTop="5dp"
         android:clickable="false"
-        android:text="9"
+        android:text="@string/cat9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cat8"
         app:layout_constraintTop_toBottomOf="@+id/cat6" />
