--- a/app/src/main/res/layout/ending.xml
+++ b/app/src/main/res/layout/ending.xml
@@ -30,6 +30,7 @@
         android:layout_marginEnd="84dp"
         android:fontFamily="casual"
         android:text="0"
+        android:textColor="#F44336"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
